Fixed Input(color) being visible issue.

--- a/sass/CanvasV.scss
+++ b/sass/CanvasV.scss
@@ -22,10 +22,11 @@ $font-stack: sans-serif 20px;
 
 .hidden {
     position: absolute;
-    left: -134234;
-    top: auto;
+    left: -99999;
+    top: 0;
     width: 0;
     height: 0;
+    z-index: -1234123;
     overflow: hidden;
 }
 
